# raytracer-rust

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  circle.ppm
core/: Cargo.toml  README.md
core/examples/: clock.rs  coca-cola.rs  group.rs  icosahedron.rs  projectile.rs  scene.rs  spheres.rs  teapot.rs  triangle.rs
core/scene-parser/: Cargo.toml
core/src/: bounds.rs  camera.rs  canvas.rs  color.rs  cube.rs  cylinder.rs  geom.rs  group.rs  intersection.rs  lib.rs  light.rs  mapping.rs  material.rs  obj_parser.rs  plane.rs  ray.rs  read_obj.rs  shape.rs  sphere.rs  transform.rs  triangle.rs  world.rs
examples/: circle.rs  clock.rs  coca-cola.rs  group.rs  projectile.rs  scene.rs  spheres.rs  teapot.rs  triangle.rs
raytracer/examples/: group.rs  icosahedron.rs  scene.rs  teapot.rs
raytracer/src/: light.rs  mapping.rs  read_obj.rs  sphere.rs
scene-parser/: Cargo.toml
scene-parser/examples/: parse_json.rs  parse_yaml.rs  render_yaml.rs
scene-parser/examples/scenes/: balls-group.yaml  balls.yaml  jamis-cover.yaml  lights.yaml  simple.json  simple.yaml
scene-parser/src/: lib.rs  parser.rs  types.rs
src/: bounds.rs  camera.rs  canvas.rs  clock.rs  color.rs  cube.rs  cylinder.rs  geom.rs  group.rs  intersection.rs  lib.rs  light.rs  mapping.rs  material.rs  obj_parser.rs  pattern.rs  plane.rs  projectile.rs  ray.rs  read_obj.rs  shape.rs  sphere.rs  transform.rs  triangle.rs  world.rs
