[package]
name = "raytracer-rust"
version = "0.1.0"
authors = ["Manolo Santos <manolo.santos@gmail.com>"]
edition = "2018"

[dependencies]
nalgebra = "0.16.12"
alga = "0.7.2"
approx = "0.3.1"
num_cpus = "1.9.0"
nom = "4.1.1"
bvh = "0.2.4"

[[example]]
name = "scene"

[[example]]
name = "group"

[[example]]
name = "triangle"

[[example]]
name = "teapot"