[package]
name = "rustracer-core"
version = "0.1.0"
authors = ["Manolo Santos <manolo.santos@gmail.com>"]
edition = "2021"

[dependencies]
nalgebra = "0.32.3"
alga = "0.9.3"
approx = "0.5.1"
num_cpus = "1.16.0"
nom = "7.1.3"
bvh = "0.7.2"
rand = "0.8.5"

[[example]]
name = "scene"

[[example]]
name = "group"

[[example]]
name = "triangle"

[[example]]
name = "teapot"

[[example]]
name = "icosahedron"

[[example]]
name = "spheres"